--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h2>QUADRINOS</h2><br>
             <ul>
               <li>
-                <img src="ELICIA_SHOW.jpg" alt="Capa do Livro 1">
+                <img src="ELICIA_SHOW_LOGO.jpg" alt="Capa do Livro 1">
                 <h3>ELICIA SHOW 2º TEMP.</h3>
                 <p>Por: Mateus J Lima</p>
                 <a href="elicia-caps.html">Ler</a>
