--- a/elicia-cap7.html
+++ b/elicia-cap7.html
@@ -12,7 +12,7 @@
     <h1>Quadrinhos do Mateus!</h1>
     <nav>
       <ul>
-        <li><a href="home.html">Início</a></li>
+        <li><a href="index.html">Início</a></li>
       </ul>
     </nav>
   </header>
